# duckdb-arrow-service

./: .gitignore  README.md
julia/: app.jl  backend.jl  seed.jl
python/: app.py  backend.py  client.ipynb  pyproject.toml  seed.py
