[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "fastapi[standard]>=0.116.1",
    "numpy>=2.3.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "ruff>=0.12.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
]
